<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"> <!-- who knows what this does -->

    <com.example.android.camera2video.AutoFitTextureView
        android:id="@+id/texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageButton
            android:id="@+id/flip"
            style="@android:style/Widget.Material.Light.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:contentDescription="@string/description_info"
            android:padding="20dp"
            android:src="@android:drawable/ic_menu_rotate" />

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/flipLayout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/flip_ring"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/mva_ring"
            android:src="@drawable/ring_white" />

        <ImageButton
            android:id="@+id/flip_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/mva_flip_desc"
            android:src="@android:drawable/ic_menu_rotate" />
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/captureLayout"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/capture_ring"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/mva_menu_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ring_orange" />

        <Button
            android:id="@+id/capture_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:contentDescription="@string/mva_capture_desc"
            app:layout_constraintBottom_toBottomOf="@+id/capture_ring"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/capture_ring"
            app:layout_constraintTop_toBottomOf="@+id/capture_ring"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/thumbnailLayout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="58dp"
            android:layout_height="58dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/mva_thumbnail_desc"
            android:cropToPadding="true" />

        <ImageView
            android:id="@+id/thumbnail_ring"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/mva_ring"
            android:src="@drawable/ring_white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/saveSegmentLayout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <ImageView
            android:id="@+id/save_ring"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/mva_ring"
            android:src="@drawable/ring_white" />

        <ImageButton
            android:id="@+id/save_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/mva_save_desc"
            android:src="@android:drawable/ic_menu_save" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerInParent="true"
            android:max="100"
            android:progress="100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="gone"
            android:backgroundTint="@color/colorPrimary"
            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
